--- a/.github/workflows/merge-master.yml
+++ b/.github/workflows/merge-master.yml
@@ -10,5 +10,4 @@ jobs:
     - uses: actions/checkout@v1
     - uses: ./merge-downstream
       env:
-        TOKEN: ${{ secrets.DEPLOY_KEY }}
-        DEPLOY_KEY: ${{ secrets.GITHUB_TOKEN }}
+        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
