add back github token

--- a/.github/workflows/merge-master.yml
+++ b/.github/workflows/merge-master.yml
@@ -10,4 +10,5 @@ jobs:
     - uses: actions/checkout@v1
     - uses: ./merge-downstream
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
