add branch specifier, move host check ignore up

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,6 +1,11 @@
 name: merge to downstream branches
 
-on: [push]
+on:
+  push:
+    branches:
+      - 'master'
+      - 'release/*'
+      - 'develop'
 
 jobs:
   merge:
