--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     # checks out out repo to $GITHUB_WORKSPACE
+    # note: this has to be a full clone to avoid "fatal: refusing to merge unrelated histories"
     - uses: actions/checkout@v1
     - uses: ./merge-downstream
       env:
