--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,4 +1,4 @@
-name: merge to downstream branches
+name: merge
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
     # checks out out repo to $GITHUB_WORKSPACE
     # note: this has to be a full clone to avoid "fatal: refusing to merge unrelated histories"
     - uses: actions/checkout@v1
-    - uses: ./merge-downstream
+    - uses: ./merge
       env:
         TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
