--- a/shellcheck/Dockerfile
+++ b/shellcheck/Dockerfile
@@ -1,7 +1,9 @@
 # recommended in official repo https://github.com/koalaman/shellcheck
 FROM koalaman/shellcheck-alpine
 
+RUN apk add bash
+
 COPY entrypoint.sh /entrypoint.sh
-RUN chmod +X /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
